adding Contact routes and edit the swagger docs
